# android_bootable_recovery

./: .clang-format  .gitignore  Android.bp  Android.mk  BasePartition.cpp  CleanSpec.mk  METADATA  NOTICE  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  adb_install.cpp  adb_install.h  asn1_decoder.cpp  asn1_decoder.h  backup.cpp  bootloader.c  bootloader.cpp  bootloader.h  bu.cpp  bu.h  commands.c  commands.h  common.h  data.cpp  data.h  data.hpp  default_device.cpp  default_recovery_ui.c  device.cpp  device.h  efs_migration.c  efs_migration.h  encryptedfs_provisioning.c  encryptedfs_provisioning.h  error_code.h  exclude.cpp  exclude.hpp  extra-functions.c  (+148 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
adbauth/: Android.mk  adb_auth.cpp  adb_auth.hpp
adbbu/: Android.mk  adbbumain.cpp  libtwadbbu.cpp  libtwadbbu.hpp  twadbstream.h  twrpback.cpp  twrpback.hpp
amend/: Android.mk  amend.c  amend.h  ast.c  ast.h  commands.c  commands.h  execute.c  execute.h  lexer.h  lexer.l  main.c  parser.h  parser_y.y  permissions.c  permissions.h  register.c  register.h  symtab.c  symtab.h  test_commands.c  test_permissions.c  test_symtab.c
applypatch/: Android.bp  Android.mk  Makefile  NOTICE  applypatch.c  applypatch.cpp  applypatch.h  applypatch.sh  applypatch_main.cpp  applypatch_modes.cpp  applypatch_modes.h  bsdiff.cpp  bspatch.c  bspatch.cpp  freecache.c  freecache.cpp  imgdiff.c  imgdiff.cpp  imgdiff.h  imgdiff_main.cpp  imgdiff_test.sh  imgpatch.c  imgpatch.cpp  libimgpatch.pc  main.c  main.cpp  utils.c  utils.cpp  utils.h  vendor_flash_recovery.rc
attr/: Android.mk  listxattr.c
batteryled/: Android.mk  batteryled.cpp  batteryled.hpp
bmlutils/: Android.bp  Android.mk  bmlutils.c  bmlutils.h
boardconfig/: BoardConfig.mk
boot_control/: Android.bp  Android.mk  boot_control.cpp  legacy_boot_control.cpp  libboot_control.cpp
bootloader_message/: Android.NObp  Android.bp  Android.mk  bootloader_message.cpp
bootloader_message_twrp/: Android.mk  bootloader_message.cpp
busybox/: Android.mk  CleanSpec.mk  Makefile  Makefile.flags  README  busybox-full.config  busybox-full.links  busybox-full.sources  busybox-minimal.config  busybox-minimal.links  busybox-minimal.sources
digest/: md5.h
dosfstools/: Android.mk  Makefile
edify/: Android.bp  Android.mk  README  README.md  edify_parser.cpp  expr.c  expr.cpp  expr.h  lexer.l  lexer.ll  main.c  main.cpp  parser.y  parser.yy  yydefs.h
etc/: Android.mk  ffs-check.sh  init.htc.rc  init.rc  init.recovery.hlthchrg25.rc  init.recovery.hlthchrg26.rc  init.recovery.ldconfig.rc  init.recovery.logd.rc  init.recovery.logd27.rc  init.recovery.logd28.rc  init.recovery.mksh.rc  init.recovery.nano.rc  init.recovery.service21.rc  init.recovery.service22.rc  init.recovery.usb.ffs.rc  init.recovery.usb.rc  init28.rc
exfat/: ChangeLog  README.md  cluster.c  node.c
fastboot/: fastboot.cpp  fastboot.h
fb2png/: .gitignore  Android.mk  COPYING  Makefile  adb_screenshoot.c  ascreenshooter.py  fb.c  fb.h  fb2png-jni.c  fb2png.c  fb2png.h  img_process.c  img_process.h  log.h  main.c  run.sh  view888
flashutils/: Android.mk  dump_image.c  erase_image.c  flash_image.c  flashutils.c  flashutils.h
fonts/: README
fuse/: Android.mk  README  buffer.c  cuse_lowlevel.c  fuse.c  fuse_i.h  fuse_loop_mt.c  fuse_lowlevel.c  fuse_mt.c  fuse_opt.c  fuse_session.c  fuse_versionscript  fusexmp.c  helper.c  mount.c  mount_util.c  mount_util.h  ulockmgr.c
fuse_sideload/: Android.bp  fuse_provider.cpp  fuse_sideload.cpp
fuse_sideload28/: fuse_sideload.cpp  fuse_sideload.h
gpt/: Android.mk  gpt.c  gpt.h  gptcrc32.c  gptcrc32.h
gui/: Android.mk  action.cpp  animation.cpp  batteryled.cpp  batteryled.hpp  blanktimer.cpp  blanktimer.hpp  button.cpp  checkbox.cpp  conditional.cpp  console.cpp  fileselector.cpp  fill.cpp  gui-functions.c  gui-functions.h  gui.cpp  gui.h  gui.hpp  hardwarekeyboard.cpp  image.cpp  input.cpp  keyboard.cpp  languages.cpp  languages.hpp  listbox.cpp  mousecursor.cpp  object.cpp  objects.hpp  pages.cpp  pages.h  pages.hpp  partitionlist.cpp  patternpassword.cpp  placement.h  progressbar.cpp  rapidxml.hpp  remaining.txt  resources.cpp  resources.hpp  scrolllist.cpp  (+9 more)
htcdumlock/: Android.mk  htcdumlock.c
init_recovery/: Android.mk
injecttwrp/: Android.mk  injecttwrp.c  listxattr.c  setcaps.c
install/: Android.bp  adb_install.cpp  fuse_install.cpp  fuse_sdcard_install.cpp  get_args.cpp  install.cpp  installcommand.cpp  legacy_property_service.cpp  package.cpp  snapshot_utils.cpp  spl_check.cpp  spl_check_unittests.cpp  verifier.cpp  wipe_data.cpp  wipe_device.cpp  zipwrap.cpp
install28/: adb_install.cpp  adb_install.h
libblkid/: Android.mk  befs.c  bitops.h  blkid.h  c.h  config.h  fileutils.c  llseek.c  log  mbsalign.c  sysfs1.c  version.c
libcrecovery/: Android.bp  Android.mk  common.h  defines.h  popen.c  system.c
libjpegtwrp/: Android.mk  jdcoefct.c  jdmainct.c  jdtrans.c
libmincrypt/: Android.mk
libpixelflinger/: Android.mk
libtar/: Android.mk  ChangeLog  ChangeLog-1.0.x  README  TODO  android_utils.c  android_utils.h  append.c  basename.c  block.c  compat.h  config.h  decode.c  dirname.c  encode.c  extract.c  fnmatch.c  gethostbyname_r.c  getservbyname_r.c  glob.c  handle.c  inet_aton.c  internal.h  libtar.h  libtar_hash.c  libtar_list.c  libtar_listhash.h  output.c  snprintf.c  strdup.c  strrstr.c  strsep.c  util.c  wrapper.c
minadbd/: Android.bp  Android.mk  AndroidTest.xml  OWNERS  README.md  README.txt  adb.c  adb.h  adb_main.c  adb_main.cpp  fdevent.c  fdevent.h  fuse_adb_provider.c  fuse_adb_provider.cpp  fuse_adb_provider.h  fuse_adb_provider_test.cpp  fuse_sideload.c  fuse_sideload.h  minadbd.cpp  minadbd.h  (+15 more)
minadbd.old/: adb.c  fuse_adb_provider.c  fuse_adb_provider.h  sockets.c  transport.h
openaes/: Android.mk  CHANGELOG  CMakeLists.txt  README  VERSION
openaes/inc/: oaes_base64.h  oaes_common.h  oaes_config.h  oaes_lib.h
openaes/src/: ftime.c  ftime.h  oaes.c  oaes_base64.c  oaes_lib.c  oaes_setup.vdproj
openaes/test/: test_encrypt.c  test_keys.c  test_performance.c  vt_aes.c
(+1488 files in other folders)
